--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 <body>
 <!-- Below, I added the different pages and questions about symptoms that the user can click on. -->	
 	<div id="header" class="w3-container w3-flat-carrot">
-		<h1>Cold or Allergies?</h1>
+		<h1>Irritable Bowel Syndrome or Inflammatory Bowel Disease?</h1>
 	</div>
 	
 	
