--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Brief Description of Goal of Code:
 The goal of this code is to design another app that distinguishes the diagnosis between two similar disorders based on what symptoms are shown. 
  
 Known Issues:
-blah, blah, blah, blah
+There was a random bracket that kept showing up in the display, but I realized that it was a mistype and deleted it.
 Ignore this error message if you see it using the javaScript console: Error with Permissions-Policy header: Origin trial controlled feature not enabled: 'interest-cohort'.
 
 References:
@@ -66,11 +66,11 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		//function that calculates and outputs the probability that the symptoms are of irritable bowel syndrome or a inflammatory bowel disease
 	// The following code lets you know when the file was last modified.
 
-	// This will help you know if you are looking at the new version of the file or if there is a delay on GitHub.
+	// This code shows if what is shown is the new version of the file or if there is a delay on GitHub.
        var docMod = document.lastModified;
        alert("This file last modified  " + docMod);
        console.log("This file last modified  " + docMod);
-	// If you find the alert box annoying, comment out that line and timestamp will still show up in the debugging console
+	
 
 
 
