Adding image.html

--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 <style>	
 .body {
      margin: 0em;
+ 	img, object{
+            	
+ 	 max-height:90%;
+  	 max-width:90%;
+ 	       	}
 }
 
 .page {
@@ -98,6 +103,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
     left: 0vw;
     z-index: 1;
 }
+
+
 </style>
 
 <body>
@@ -189,7 +196,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		<a href="#five" onclick="resultsPercent();" class="w3-btn w3-black"> Click for results! </a>
 		<!-- I created the button for the results button here. -->	
 		<!-- This is the last page, and clicking "Click for results" button ouputs the two probabilities for having either irritable bowel syndrome or inflammatory bowel disease. -->
-		
+		<img src="stomach.jpeg" alt="Stomach Diagram">
 		</div>
 	</div>	
 	
