Added last comments.html

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ img, object{
  max-height:90%;
  max-width:90%;
  	       	}
-
+/*This style code adjusts the image to around 90% of any screen. */
 
 </style>
 
@@ -199,6 +199,7 @@ img, object{
 		<!-- I created the button for the results button here. -->	
 		<!-- This is the last page, and clicking "Click for results" button ouputs the two probabilities for having either irritable bowel syndrome or inflammatory bowel disease. -->
 		<img src="stomach.jpeg" alt="Stomach Diagram">
+		<!-- I added the image to the repository and to the results page. -->
 		</div>
 	</div>	
 	
