--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ The goal of this code is to design another app that distinguishes the diagnosis 
  
 Known Issues:
 There was a random bracket that kept showing up in the display, but I realized that it was a mistype and deleted it.
-Ignore this error message if you see it using the javaScript console: Error with Permissions-Policy header: Origin trial controlled feature not enabled: 'interest-cohort'.
+
 
 References:
 https://www.w3schools.com/w3css/default.asp
@@ -64,9 +64,9 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	}
 		//function that calculates and outputs the probability that the symptoms are of irritable bowel syndrome or a inflammatory bowel disease
-	// The following code lets you know when the file was last modified.
+	
 
-	// This code shows if what is shown is the new version of the file or if there is a delay on GitHub.
+	// This code shows if when the file was last modified and if what is shown on the website is the new version of the file or if there is a delay on GitHub.
        var docMod = document.lastModified;
        alert("This file last modified  " + docMod);
        console.log("This file last modified  " + docMod);
@@ -77,7 +77,6 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 </script>	
 
 
-<!-- THIS STYLE CODE HELPS MAKE THE APP LOOK GOOD. DONT MESS WITH IT -->
 <style>	
 .body {
      margin: 0em;
